sfdx-source/force-app/main/default/objects/Campaign_Product__c/Campaign_Product__c.object-meta.xml
<CustomObject>
    <description>LEM-625: This object is to store the products available for reps to pitch or gather Mx insights on so that they can be easily updated and related back to other objects.</description>
    <label>Solution</label>
    <nameField>
        <label>Solution Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Solutions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>