sfdx-source/force-app/main/default/objects/Campaign_Product__c/fields/Adjusted_Incr_Sales_Uplift__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Incr_Sales_Uplift__c</fullName>
    <label>Adjusted Incr. Sales Uplift $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>