sfdx-source/force-app/main/default/objects/Campaign_Product__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>LEM-15224: This field represents the Category of the Solution.</description>
    <complianceGroup>GDPR</complianceGroup>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advertisements</fullName>
            </value>
            <value>
                <fullName>Discoverability</fullName>
            </value>
            <value>
                <fullName>Loyalty</fullName>
            </value>
            <value>
                <fullName>Marketplace Products</fullName>
            </value>
            <value>
                <fullName>Menu Optimizations</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Platform</fullName>
            </value>
            <value>
                <fullName>Promos</fullName>
            </value>
            <value>
                <fullName>Selection</fullName>
            </value>
            <value>
                <fullName>Sponsored Listings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>