sfdx-source/force-app/main/default/objects/Campaign_Product__c/fields/IncrementalSales__c.field-meta.xml
<CustomField>
    <fullName>IncrementalSales__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15222: It is used to store the sales value for the campaign Product.</description>
    <label>Predicted Incremental Sales Uplift $</label>
    <precision>18</precision>
s
    <scale>2</scale>
    <type>Currency</type>
</CustomField>