sfdx-source/force-app/main/default/objects/Campaign_Product__c/fields/Metric__c.field-meta.xml
<CustomField>
    <fullName>Metric__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <inlineHelpText>LEM-15226: It stores metric value for Lever.</inlineHelpText>
    <label>Metric</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Marketing Revenue</fullName>
            </value>
            <value>
                <fullName>Marketplace GMV</fullName>
            </value>
            <value>
                <fullName>Platform Volume</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>