sfdx-source/force-app/main/default/objects/Campaign_Product__c/fields/Number_of_Stores__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Stores__c</fullName>
    <description>LEM-15224: It represents the number of stores.</description>
    <complianceGroup>GDPR</complianceGroup>
    <label>Number of Stores</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>