sfdx-source/force-app/main/default/objects/Campaign_Product__c/fields/Points__c.field-meta.xml
<CustomField>
    <fullName>Points__c</fullName>
    <description>LEM-15224: It represents the points of the solution record.</description>
    <complianceGroup>GDPR</complianceGroup>
    <label>Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>