sfdx-source/force-app/main/default/objects/Campaign_Product__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <description>LEM-808, LEM-18931: This field is to indicate the Product Family of a new Campaign Product.</description>
    <inlineHelpText>Indicates the &apos;product family&apos;, or product category, under which the campaign product falls.</inlineHelpText>
    <label>Product Family</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ads</fullName>
            </value>
            <value>
                <fullName>Alcohol</fullName>
            </value>
            <value>
                <fullName>Cash on Delivery</fullName>
            </value>
            <value>
                <fullName>DashPass</fullName>
            </value>
            <value>
                <fullName>Drive</fullName>
            </value>
            <value>
                <fullName>Loyalty</fullName>
            </value>
            <value>
                <fullName>Marketplace</fullName>
            </value>
            <value>
                <fullName>New Business</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Pick Up</fullName>
            </value>
            <value>
                <fullName>Platform</fullName>
            </value>
            <value>
                <fullName>Promos</fullName>
            </value>
            <value>
                <fullName>Regulatory</fullName>
            </value>
            <value>
                <fullName>Storefront</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Weblinks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>