sfdx-source/force-app/main/default/objects/Campaign_Product__c/fields/Rank__c.field-meta.xml
<CustomField>
    <fullName>Rank__c</fullName>
    <description>LEM-15224: It represents the Rank of the Solution record.</description>
    <complianceGroup>GDPR</complianceGroup>
    <label>Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>