sfdx-source/force-app/main/default/objects/Campaign_Product__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15226: It stores type value for Solution.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Growth</fullName>
            </value>
            <value>
                <fullName>Operational</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Tip</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>