sfdx-source/force-app/main/default/objects/Campaign_Product__c/fields/VSP_Code__c.field-meta.xml
<CustomField>
    <fullName>VSP_Code__c</fullName>
    <description>LEM-15224: It represents the VSP Code of the Solution.</description>
    <complianceGroup>GDPR</complianceGroup>
    <label>VSP Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>