sfdx-source/force-app/main/default/objects/Campaign_Product__c/listViews/Inactive_Campaign_Products.listView-meta.xml
<ListView>
    <fullName>Inactive_Campaign_Products</fullName>
    <columns>NAME</columns>
    <columns>Product_Family__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Inactive</value>
    </filters>
    <label>Inactive Campaign Products</label>
</ListView>